# PBRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  SOBOL_IMPLEMENTATION_SUMMARY.md
core/: CMakeLists.txt  logger.cpp  logger.hpp
core/accelerate/: bounds.cpp  bounds.hpp  bvh.cpp  bvh.hpp  sceneBVH.cpp  sceneBVH.hpp
core/light/: areaLight.cpp  areaLight.hpp  envLight.cpp  envLight.hpp  infiniteLight.cpp  infiniteLight.hpp  light.hpp  ray.cpp  ray.hpp
core/material/: conductorMaterial.cpp  conductorMaterial.hpp  dielectricMaterial.cpp  dielectricMaterial.hpp  diffuseMaterial.cpp  diffuseMaterial.hpp  groundMaterial.cpp  groundMaterial.hpp  iridescentMaterial.cpp  iridescentMaterial.hpp  material.hpp  microfacet.cpp  microfacet.hpp  specularMaterial.cpp  specularMaterial.hpp
core/presentation/: camera.cpp  camera.hpp  film.cpp  film.hpp  image.cpp  image.hpp  previewer.cpp  previewer.hpp  ray.cpp  ray.hpp
core/renderer/: BDPTRenderer.cpp  BDPTRenderer.hpp  MISRenderer.cpp  MISRenderer.hpp  PTRenderer.cpp  PTRenderer.hpp  RTRenderer.cpp  RTRenderer.hpp  debugRenderer.cpp  debugRenderer.hpp  normalRenderer.cpp  normalRenderer.hpp  renderer.cpp  renderer.hpp
core/sample/: spherical.hpp
core/sampler/: aliasTable.cpp  aliasTable.hpp  lightSampler.cpp  lightSampler.hpp  rngSampler.hpp  sampler.hpp  sobolSampler.cpp  sobolSampler.hpp  spherical.hpp
core/sequence/: IndependentSampler.hpp  rngSampler.hpp  sampler.hpp  sobolSampler.cpp  sobolSampler.hpp  sobolmatrices.cpp  sobolmatrices.hpp
core/shape/: circle.cpp  circle.hpp  model.cpp  model.hpp  plane.cpp  plane.hpp  quad.cpp  (+8 more)
(+43 files in other folders)
